fix: try fix height on mobile devices

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -12,7 +12,7 @@ html {
 }
 
 body {
-    min-height: 100vh;
+    max-height: 100vh;
     /* mobile viewport bug fix */
     min-height: -webkit-fill-available;
 }
